# spottedcat

./: .gitignore  AI_GAME_GENERATION_GUIDE.md  Cargo.toml  FONT_USAGE.md  Makefile  README.md  README_FONT.md  REFACTORING.md  SCENE_SWITCHING.md  clean.sh  readme.md
.cargo/: config.toml
.github/workflows/: examples.yml
docs/: image-shader.md  model-shader.md
ecs/: Cargo.toml
ecs/src/: components.rs  lib.rs
example/: audio.rs  window.rs
examples/: README.md  advanced_image_shader_full.rs  advanced_model_shader_full.rs  animated_gltf.rs  async_loading_example.rs  atlas_subimage_move_test.rs  audio_test.rs  auto_clip_demo.rs  billboard.rs  centered_text_test.rs  clipping_example.rs  custom_shader_example.rs  debug_clipping_bounds.rs  debug_clipping_text.rs  debug_obvious_wrap.rs  debug_render_wrap.rs  debug_text_height.rs  debug_wrapping.rs  demo.rs  draw_child_example.rs  draw_sub_example.rs  example_font.rs  example_image.rs  extreme_wrap_test.rs  flip_test.rs  fog_world.rs  gltf_loader.rs  happy_tree_desktop.rs  image_shader_template.rs  input_example.rs  instancing_test.rs  interactive_text_demo.rs  metal_sphere.rs  mixed_model_shader_stress.rs  model_test.rs  mouse_click_example.rs  nested_clipping_example.rs  obvious_wrap_test.rs  one_shot_splash.rs  render_state_stress.rs  (+17 more)
examples/android/: .gitignore  build_spottedcat_android_libs.sh
examples/android/GameActivityExample/app/: build.gradle.kts
examples/android/GameActivityExample/app/src/androidTest/java/com/example/gameactivityexample/: AppIdentityInstrumentedTest.kt
examples/android/GameActivityExample/app/src/main/: AndroidManifest.xml
examples/android/GameActivityExample/app/src/main/java/com/example/gameactivityexample/: FloatingWindowService.kt  MainActivity.kt
examples/android/GameActivityExample/app/src/main/res/values/: strings.xml  themes.xml
examples/android/GameActivityExample/app/src/main/res/values-night/: themes.xml
examples/android/GameActivityExample/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
examples/android/GameActivityExample/gradle/: libs.versions.toml
examples/android/GameActivityExample/gradle/wrapper/: gradle-wrapper.properties
examples/android/spottedcat_android_wrapper/: Cargo.toml
examples/android/spottedcat_android_wrapper/src/: lib.rs
examples/ios/: .gitignore  README.md  build_spottedcat_xcframework.sh
examples/ios/SpottedcatIosSimulatorExample/SpottedcatIosSimulatorExample/: ContentView.swift  Info.plist  SpottedcatIosSimulatorExample-Bridging-Header.h  SpottedcatIosSimulatorExampleApp.swift  main.m
examples/ios/SpottedcatIosSimulatorExample/SpottedcatIosSimulatorExample.xcodeproj/: project.pbxproj
examples/ios/SpottedcatIosSimulatorExample/SpottedcatIosSimulatorExample.xcodeproj/xcshareddata/xcschemes/: SpottedcatIosSimulatorExample.xcscheme
examples/ios/include/: spottedcat.h
examples/ios/spottedcat_ios_wrapper/: Cargo.toml
examples/ios/spottedcat_ios_wrapper/src/: lib.rs
examples/shaders/: metal_sphere_model.wgsl
examples/wasm/: .gitignore  build.sh
examples/wasm/flappy_cat/: Cargo.toml  wasm-pack.toml
examples/wasm/flappy_cat/src/: lib.rs
examples/wasm/showcase_demos/: Cargo.toml  wasm-pack.toml
examples/wasm/showcase_demos/src/: lib.rs
examples/wasm/wasm_demo/: Cargo.toml  wasm-pack.toml
examples/wasm/wasm_demo/src/: lib.rs
examples/wasm/web/: index.html  main.js
macros/: Cargo.toml
macros/src/: lib.rs
perf/: Cargo.toml  README.md
perf/benches/: cpu.rs  render_2d.rs  render_3d.rs
perf/examples/: render_state_stress.rs  text_performance_test.rs
scripts/: check_examples.sh  run_performance.sh
skills/spot-game-builder/: SKILL.md
skills/spot-game-builder/agents/: openai.yaml
skills/spot-game-builder/references/: api-patterns.md  repo-map.md
spottedcat_ecs/: Cargo.toml
spottedcat_ecs/src/: entity.rs  lib.rs  system.rs
src/: android.rs  assets.rs  audio.rs  context.rs  context_3d.rs  controls.rs  drawable.rs  drawable_3d.rs  events.rs  fog.rs  font.rs  gamepad.rs  glyph_cache.rs  graphics.rs  image.rs  image_raw.rs  image_shader.rs  input.rs  ios.rs  key.rs  keycode.rs  launch.rs  lib.rs  main.rs  math.rs  model.rs  mouse.rs  packer.rs  platform.rs  platform_events.rs  pt.rs  scenes.rs  shader_opts.rs  shader_templates.rs  sound.rs  splash.rs  text.rs  text_renderer.rs  texture.rs  touch.rs  (+1 more)
src/audio/: mixer.rs  mod.rs  player.rs  track.rs
src/graphics/: atlas.rs  core.rs  core_3d.rs  drawable.rs  f32.rs  font.rs  graphics.rs  image.rs  image_ops.rs  image_pipeline.rs  image_shader.wgsl  mip.wgsl  mod.rs  model_raw.rs  profile.rs  render.rs  render_3d.rs  shader.rs  shader_3d.rs  text_layout.rs  texture.rs
src/shaders/: fog_background.wgsl  fog_background_fallback.wgsl  image.wgsl  mipmap.wgsl  model.wgsl  model_instanced.wgsl  shadow.wgsl  shadow_instanced.wgsl  text_tint.wgsl
src/shaders/templates/: model_template.wgsl
src/utils/: gltf.rs  image.rs  mod.rs  obj.rs
src/window/: android.rs  backend.rs  desktop.rs  ios.rs  mod.rs  sdl.rs  wasm.rs  winit_backend.rs
tests/: audio.rs  component_test.rs
