[package]
name = "spottedcat"
version = "0.3.6"
edition = "2024"
authors = ["Arion <arion.dsh@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arion-dsh/spottedcat"
description = "Rusty SpottedCat simple game engine"
readme = "README.md"
exclude = [
    "examples/android/**",
    "examples/ios/**",
    "examples/wasm/**",
    "assets/**",
]



[dependencies]
wgpu = { version = "28", features = ["gles"] }
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
winit = { version = "0.30", features = ["android-native-activity"] }
image = "0.25"
ab_glyph = "0.2"
cpal = { version = "0.17.3", features = ["wasm-bindgen"] }
symphonia = { version = "0.5", features = ["all"] }
fundsp = "0.18"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-time = "1"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlCanvasElement", "Window"] }



[[example]]
name = "input_example"
path = "examples/input_example.rs"

[[example]]
name = "centered_text_test"
path = "examples/centered_text_test.rs"

[[example]]
name = "seven_level_test"
path = "examples/seven_level_test.rs"

[[example]]
name = "text_performance_test"
path = "examples/text_performance_test.rs"

[[example]]
name = "audio_test"
path = "examples/audio_test.rs"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
