[package]
name = "spottedcat"
version = "0.5.6"
edition = "2024"
authors = ["Arion <arion.dsh@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arion-dsh/spottedcat"
description = "Rusty SpottedCat simple game engine"
readme = "README.md"
exclude = [
    "examples/android/**",
    "examples/ios/**",
    "examples/wasm/**",
    "assets/**",
]



[dependencies]
wgpu = { version = "28", features = ["gles"] }
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
ab_glyph = "0.2"
cpal = { version = "0.17.3", features = ["wasm-bindgen"] }
symphonia = { version = "0.5", features = ["all"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.6"
android-activity = { version = "0.6.1", features = ["game-activity"] }
ndk = "0.9.0"
rwh_06 = { package = "raw-window-handle", version = "0.6" }
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.6.3" }
objc2-foundation = { version = "0.3.2" }
objc2-core-motion = { version = "0.3.2" }
block2 = { version = "0.6.2" }

[dev-dependencies]
gltf = "1.4.1"
image = "0.25"
fundsp = "0.18"
[features]
default = []
sensors = []

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-time = "1"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlCanvasElement", "Window"] }


[[example]]
name = "input_example"
path = "examples/input_example.rs"

[[example]]
name = "centered_text_test"
path = "examples/centered_text_test.rs"

[[example]]
name = "seven_level_test"
path = "examples/seven_level_test.rs"

[[example]]
name = "text_performance_test"
path = "examples/text_performance_test.rs"

[[example]]
name = "gltf_loader"
path = "examples/gltf_loader.rs"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
