[package]
name = "spottedcat_android_wrapper"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
spottedcat = { path = "../../.." }
winit = { version = "0.30", features = ["android-native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }
image = "0.25"
