[package]
name = "spottedcat_ios_wrapper"
version = "0.5.4"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
spottedcat = { path = "../../..", features = ["sensors"] }
image = "0.25"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-core-motion = "0.3.2"
block2 = "0.6.2"
