[package]
name = "wasm_demo"
version = "0.5.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spottedcat = { path = "../../..", features = ["model-3d", "utils"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
